--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <h3>about Rick and Morty</h3>
     <p style="color:blue;"> Rick and Morty is a cartoon.<br>It is a funny cartoon.</p>
     <!--ı think this is a great cartoon-->
-    <a href="https://www.imdb.com/title/tt2861424/">click the link</a>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b8/Rick_and_Morty_season_1.png/250px-Rick_and_Morty_season_1.png"
+    <a style="color:red;""font-size:24;"href="https://www.imdb.com/title/tt2861424/">click the link</a>
+    <br><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b8/Rick_and_Morty_season_1.png/250px-Rick_and_Morty_season_1.png"
          alt="rick and morty.com" width="250" height="291">
-    <button style="font-size:30px;">click me</button>
+    <br><button style="font-size:30px;">click me</button>
     <h3>characters</h3>
     <ul>
       <li>Morty</li>
