--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
     <title> Rick and Morty</title>
+    <meta charset="UTF-8"/>
   </head>
-  <body>
+  <body style="background-color:lightgreen;">
     <h1><b>RİCK AND MORTY</b></h1>
     <h3>about Rick and Morty</h3>
     <p style="color:blue;"> Rick and Morty is a cartoon.<br>It is a funny cartoon.</p>
