--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title> Rick and Morty</title>
     <meta charset="UTF-8"/>
+    <link rel="icon href="index.ico" type="image/index-icon">
   </head>
   <body style="background-color:lightgreen;">
     <h1><b>RİCK AND MORTY</b></h1>
