--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
   </head>
   <body style="background-color:lightgreen;">
-    <h1 style="text-align: center"><b>RİCK AND MORTY</b></h1>
+    <h1 style="text-align: center"><b>RICK AND MORTY</b></h1>
     <h3 style="text-align: center">about Rick and Morty</h3>
     <p style="color:blue;"> Rick and Morty is a cartoon.<br>It is a funny cartoon.</p>
     <!--ı think this is a great cartoon-->
