--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="background-color:lightgreen;">
     <h1 style="text-align: center"><b>RICK AND MORTY</b></h1>
-    <h3 style="text-align: center">about Rick and Morty</h3>
+    <h3 style="text-align: center">About Rick and Morty</h3>
     <p style="color:blue;"> Rick and Morty is a cartoon.<br>It is a funny cartoon.</p>
     <!--ı think this is a great cartoon-->
     <a style="color:red;" href="https://www.imdb.com/title/tt2861424/">click the link</a>
