--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <div style="beckround-color:lightblue">
     <title> Rick and Morty</title>
+    </div>
     <meta charset="UTF-8"/>
   </head>
   <body style="background-color:lightgreen;">
