--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <div style="beckround-color:lightblue">
+    <div style="background-color:lightblue">
     <title> Rick and Morty</title>
     </div>
     <meta charset="UTF-8"/>
