--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <body style="background-color:lightgreen;">
     <h1 style="text-align: center"><b>RICK AND MORTY</b></h1>
     <h3 style="text-align: center">About Rick and Morty</h3>
-    <p style="color:blue;"> Rick and Morty is a cartoon.<br>It is a funny cartoon.</p>
+    <p style="color:blue;">Rick And Morty was inspired by Back to the Future.<br>But his first name wasn't Rick and Morty,
+     <br> and he was a little different from the present.<br>The first name is Doc And Mharti.
+      <br>Then Roiland decided to make a series of cartoons called Dog World.
+     <br>Finally, Roiland and Harmon completed <br>the project and launched Rick And Morty</p>
     <!--ı think this is a great cartoon-->
     <a style="color:red;" href="https://www.imdb.com/title/tt2861424/">click the link</a>
     <br><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b8/Rick_and_Morty_season_1.png/250px-Rick_and_Morty_season_1.png"
