--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <br>Finally, Roiland and Harmon completed <br>the project and launched Rick And Morty</i></p>
     <!--ı think this is a great cartoon-->
     <a style="color:red;" href="https://www.imdb.com/title/tt2861424/">click the link</a>
-    <br><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b8/Rick_and_Morty_season_1.png/250px-Rick_and_Morty_season_1.png"
+    <br><br><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b8/Rick_and_Morty_season_1.png/250px-Rick_and_Morty_season_1.png"
          alt="rick and morty.com" width="250" height="291">
     <br><button style="font-size:30px;">click me</button>
     <h3>characters</h3>
