--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <title> Rick and Morty</title>
     <meta charset="UTF-8"/>
   </head>
-  <body style="background-color:lightgreen;">
-    <h1 style="text-align: center"><b>RICK AND MORTY</b></h1>
-    <h3 style="text-align: center">About Rick and Morty</h3>
-    <p style="color:blue; align=center;"><i>Rick And Morty was inspired by Back to the Future.<br>But his first name wasn't Rick and Morty,
+  <body>
+    <h1><b>RICK AND MORTY</b></h1>
+    <h3>About Rick and Morty</h3>
+    <p><i>Rick And Morty was inspired by Back to the Future.<br>But his first name wasn't Rick and Morty,
      <br> and he was a little different from the present.<br>The first name is Doc And Mharti.
       <br>Then Roiland decided to make a series of cartoons called Dog World.
      <br>Finally, Roiland and Harmon completed <br>the project and launched Rick And Morty</i></p>
