--- a/a1-kocome16/index.html
+++ b/a1-kocome16/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	  <link rel="stylesheet" type="text/css" href="mystyle.css">
   <title> Rick and Morty</title>
     <meta charset="UTF-8"/>
   </head>
@@ -22,5 +23,21 @@
       <li>Rick</li>
       <li>Summer</li>
     </ul>
+    <h3>cartoon characters</h3>
+    <table>
+	<tr>
+		<th>name</th>
+		<th>surname</th>
+    </tr>
+    <tr>
+        <td>rick</td>
+        <td>sanchez</td>
+    </tr>
+     <tr>
+	 <td>morty</td>
+	 <td>smith</td>
+	 </tr>
+         
+        </table>
   </body>
 </html>
